--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,8 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
+
+
 development:
   adapter: postgresql
   encoding: unicode
@@ -19,6 +21,7 @@ development:
   pool: 5
   username: feminine
   password:
+  host: localhost
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
